Fix #60: Floating images may overflow teaser
During a big refactoring (commit 672d25a1) we accidentally removed a
clearing div which catered to floating images in the teaser. Instead of
reintroducing this div, we apply a clearfix hack, what is more
contemporary.

We also modify .realblog_entries_preview:after to use the very same
technique.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -127,10 +127,9 @@ margin: 10px 0 0 0;
     padding: 0 1em;
     float: left;
 }
-.realblog_entries_preview::after {
-    content: " ";
-    display: block;
-    height: 0;
+.realblog_entries_preview:after {
+    content: "";
+    display: table;
     clear: both;
 }
 */
@@ -162,6 +161,11 @@ margin: 6px 0 10px 0;
 .realblog_show_story {
 width: 100%;
 border-bottom: 1px solid;
+}
+.realblog_show_story:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .realblog_show_story_entry {
